--- a/lasp_reu_python_tutorial_day2_exercises.ipynb
+++ b/lasp_reu_python_tutorial_day2_exercises.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Download teaching material\n",
+    "\n",
+    "git clone https://github.com/michaelaye/LASP-REU-Python.git\n",
+    "\n",
+    "Or manually with browser at\n",
+    "\n",
+    "https://github.com/michaelaye/LASP-REU-Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exploring Data Through Plotting\n",
     "\n",
     "(based on Morgan Rehnberg's previous tutorial exercices. Adapted to use pandas by K.-Michael Aye)\n",
@@ -785,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.7.3"
   },
   "widgets": {
    "state": {},
