--- a/lasp_reu_python_tutorial_day1.ipynb
+++ b/lasp_reu_python_tutorial_day1.ipynb
@@ -30,7 +30,7 @@
     }
    },
    "source": [
-    "![Standard library](standard_lib.png \"Standard library\")"
+    "![Standard library](standard_lib.png \"Standard library\")  "
    ]
   },
   {
@@ -76,16 +76,124 @@
    },
    "source": [
     "## Which Python distribution?\n",
-    "* Currently best supported is Anaconda by Continuum.io\n",
+    "* Currently best supported is Anaconda by anaconda.com\n",
     "* Works on the major three operating systems\n",
     "* Comes with the most important science packages pre-installed."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# Switch to Conda presentation"
+    "# Main things about conda and Python packages\n",
+    "\n",
+    "* Install a Python 3.7 or 3.8 version of Anaconda unless you have a good reason to choose something else\n",
+    "* Conda works with so called \"environments\" that encapsulate a set of Python packages\n",
+    "* By default, you first Anaconda installation creates an environment called \"base\"\n",
+    "* Don't bother with more enviroments and channels for now, but look at my conda talk to learn more"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Some ways to get Python packages\n",
+    "\n",
+    "* As a `conda` package\n",
+    "* As a `pip` package\n",
+    "* From a GitHub repo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Install new conda packages\n",
+    "\n",
+    "* Either use the Anaconda Navigator interface\n",
+    "* or, in a terminal:\n",
+    "\n",
+    "```bash\n",
+    "conda activate base  # if it isn't active already\n",
+    "conda install <pkg_name>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Install pip packages\n",
+    "\n",
+    "* Sometimes packages do not exist as conda packages\n",
+    "  * Because it's not trivial to create them\n",
+    "* Next thing is to try `pip`:\n",
+    "\n",
+    "```bash\n",
+    "conda activate base   # or a different enviroment of your choice\n",
+    "pip install <pkg_name>\n",
+    "```\n",
+    "\n",
+    "* VERY IMPORTANT: pip relates to the currently active environment!\n",
+    "  * if your target env wasn't active, the package goes somewhere else\n",
+    "  * This is the most frequest reason why you cannot import a package even so you installed it successfully."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Install from a GitHub repo\n",
+    "\n",
+    "![github_clone_icon](./github_clone_icon.png)\n",
+    "\n",
+    "```bash\n",
+    "git clone <link_created_by_github_repo_webpage>\n",
+    "cd <pkg_name>\n",
+    "pip install .   # note the dot!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Last comments about Python packages\n",
+    "\n",
+    "* Always try conda first, even if someone recommends a pip install\n",
+    "* pip could mess up your conda environment\n",
+    "  * Watch if the `pip install` replaced a previously installed package with an older version\n",
+    "  * Well designed and actively updated pip packages usually do not do this.\n",
+    "  * If one of your packages was replaced with an older version, you should reinstall it with conda:\n",
+    "    * Not sure the Anaconda Navigator offers `force-reinstall` option?\n",
+    "  \n",
+    "```bash\n",
+    "conda install <pck_name> --force-reinstall\n",
+    "```\n"
    ]
   },
   {
@@ -93,7 +201,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -179,7 +287,7 @@
     "# Most important IPython features\n",
     "* Tab completion for Python modules\n",
     "* Tab completion for object's attributes (\"introspection\")\n",
-    "* automatic reload possible of things you are working on."
+    "* automatic reload possible of code you are working on."
    ]
   },
   {
@@ -210,7 +318,10 @@
     "# My recommendation\n",
     "* Work with IPython for very quick short things that don't need plots or on a slow remote connection\n",
     "* Work with Jupyter notebook for interactive data analysis and to develop working code blocks\n",
-    "* Put working code blocks together into script files for science production and run \"non-interactive\""
+    "* Put working code blocks together into script files (i.e. `modules`) for:\n",
+    "  * importing that code into other notebooks\n",
+    "    * Do NOT copy/paste functions or code blocks around if you use them a lot\n",
+    "  * run that code as a script non-interactively using `python scriptname.py`"
    ]
   },
   {
@@ -230,7 +341,8 @@
     "[I 16:27:34.881 NotebookApp] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).\n",
     "```\n",
     "* Will launch what is called a \"notebook server\" and open web browser with dash-board (unless configured otherwise)\n",
-    "* This server pipes web browser cells to the underlying Python interpreter."
+    "* This server pipes web browser cells to the underlying Python interpreter.\n",
+    "* Alternatively, use the Anaconda Navigator to launch a notebook server."
    ]
   },
   {
@@ -271,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -295,27 +407,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "astring\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "23.1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 'astring'\n",
     "print(a)   # not the last line, so if I want to see it, I need to use the print() function.\n",
@@ -357,7 +451,9 @@
    "source": [
     "Storing more than one item is done in `lists`.\n",
     "\n",
-    "A list is only one of Python's `containers`, and it is very flexible, it can store any Python object."
+    "A list is only one of Python's `containers`, and it is very flexible, it can store any Python object.\n",
+    "\n",
+    "However, flexibility comes at the cost of speed for a lot of data."
    ]
   },
   {
@@ -398,12 +494,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "i = 2\n",
     "print(mylist[:i])\n",
     "print(mylist[i:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Poll!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Poll: What do I get with indexes [1:3]\n",
+    "mylist[1:3]"
    ]
   },
   {
@@ -497,7 +612,7 @@
    "outputs": [],
    "source": [
     "def myfunc(something):  # note how I don't care about the type here!\n",
-    "    \"\"\"Print the length of `something` and print itself.\"\"\"\n",
+    "    \"Print the length of `something` and print itself.\"\n",
     "    print(\"Length:\", len(something))   # all `something` needs to support is to have a length\n",
     "    print(\"You gave:\", something)"
    ]
@@ -509,6 +624,15 @@
    "outputs": [],
    "source": [
     "myfunc('mystring')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(myfunc)"
    ]
   },
   {
@@ -533,9 +657,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The principle of not defining a required type for a function, but require an `ability` is very important in Python and is called `duck typing`:\n",
+    "The concept of not defining a required type for a function input, but require an `ability` of that input is very important in Python and is called `duck typing`:\n",
     "\n",
-    "> \"In other words, don't check whether it IS-a duck: check whether it QUACKS-like-a duck, WALKS-like-a duck, etc, etc, depending on exactly what subset of duck-like behaviour you need to play your language-games with.\""
+    "> \"In other words, don't check whether it IS-a-duck: check whether it QUACKS-like-a duck, WALKS-like-a duck, etc, etc, depending on exactly what subset of duck-like behaviour you need to play your language-games with.\""
    ]
   },
   {
@@ -599,6 +723,8 @@
    "source": [
     "`while` loops are the most low level loops, they always can be made to work, as you design the interruption criteria yourself.\n",
     "\n",
+    "But if you forget to update the input to the condition, your loop will run forever.\n",
+    "\n",
     "### For loops\n",
     "\n",
     "`for` loops are designed to loop over containers, like lists.\n",
@@ -613,7 +739,7 @@
    "outputs": [],
    "source": [
     "mylist = [5, 'hello', 23.1]\n",
-    "for item in mylist:\n",
+    "for item in mylist:  # this is how you loop in Python. NO indexes (unless you really need them)\n",
     "    print(item)"
    ]
   },
@@ -714,7 +840,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It takes either a loop (as above) or a conversion to a list to see the actual content:"
+    "It takes either a loop (like above) or a conversion to a list to see the actual content:"
    ]
   },
   {
@@ -777,7 +903,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "afile = open('testfile', 'w')"
+    "afile = open('testfile', 'w')  # returns a file `object`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Objects are a big concept in Python\n",
+    "* The term stems from Object-Oriented Programming\n",
+    "* Objects posses attributes and methods (= a function that's inside an object)"
    ]
   },
   {
@@ -786,7 +921,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "afile.name?"
+    "afile.name  # an attribute"
    ]
   },
   {
@@ -795,6 +930,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# now using the write method of the afile object\n",
     "afile.write('some text \\n')   # \\n is the symbol to create a new line\n",
     "afile.write('write some more \\n')"
    ]
@@ -803,7 +939,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `write` function of the `afile` object returns the length of what just was written.\n",
+    "The `write` method of the `afile` object returns the length of what just was written.\n",
     "\n",
     "When done, the file needs to be closed!\n",
     "\n",
@@ -839,6 +975,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**NOTE**\n",
+    "\n",
+    "It is now recommend to use the so-called context manager principle for file reading and writing, because it remembers for you to close files after your work.\n",
+    "\n",
+    "* Context managers are named for the fact that the work on the file is done in an indented code block\n",
+    "* The indented code block is also called the \"local context\"\n",
+    "\n",
+    "See an example below!\n",
+    "\n",
     "#### reading the file\n",
     "\n",
     "One can also use a so called `context manager` and indented code block to indicate to Python when to automatically close the file:"
@@ -884,6 +1029,13 @@
     "\n",
     "Next session we will learn how to import all these powerful analysis packages into a Python session, learn about the most import science packages and play with some real data."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -903,7 +1055,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "widgets": {
    "state": {},
